@@ -14,6 +14,8 @@
 	  "fill" and "fit" fill modes (and aspect correction) when scale is 1.
 	* imagewin/imagewin.cc: Fixed resolution changed oddities from the previous
 	  commit while still keeping the fix for scale 1.
+	* usecode/ucinternal.cc, usecode/useval.*: Fixed bug #3001289: "Strange
+	  things in NPC dialogues", also fixing a couple of bugs in SI usecode.
 
 2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Changelog: Previous two entries (what was wrong with me?).
